# good-morning-rs

./: .gitignore
good-morning-calendar-proxy/: Cargo.toml  README.md
good-morning-calendar-proxy/src/: main.rs
good-morning-esp/: Cargo.toml  sdkconfig.defaults
good-morning-esp/.cargo/: config.toml
good-morning-esp/src/: display.rs  main.rs  query_calendar.rs  query_weather.rs  time.rs  wifi.rs
good-morning-lib/: Cargo.toml
good-morning-lib/examples/: display.rs  events.rs
good-morning-lib/resources/: example-weather.json
good-morning-lib/resources/icons/: convert.sh
good-morning-lib/src/: calendar.rs  datetime.rs  draw.rs  error.rs  lib.rs  weather.rs
good-morning-lib/src/weather/: codes.rs
good-morning-lib/tests/: UK_Holidays.ics  test_openmeteo.rs  test_uk_calendar.rs
