[package]
name = "good-morning-calendar-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
good-morning-lib = { path = "../good-morning-lib" }
ical = "0.11.0"
ical_property = "0.1.3"
reqwest = "0.12.9"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
