[package]
name = "good-morning-rs"
version = "0.1.0"
authors = ["Julian Büttner <git@julianbuettner.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "good-morning-rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
lto = true
opt-level = "z"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
lto = true
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-svc = "0.28.0"
esp-idf-hal = "0.44.1"
dotenvy_macro = "0.15.7"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.3.3"
embedded-hal = "1.0.0"
serde = { version = "1.0.215", features = ["derive"] }
# epd-waveshare = "0.6.0"
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare.git" }
good-morning-lib = { path = "../good-morning-lib" }
chrono = { version = "0.4.39", features = ["serde"] }
esp-idf-sys = "0.35.0"
ical = "0.11.0"
ical_property = "0.1.3"
chrono-tz = "0.10.0"
serde_json = "1.0.134"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
