[package]
name = "good-morning-esp"
version = "0.1.0"
authors = ["Julian Büttner <julian.buettner@medicalvalues.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "good-morning-esp"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
chrono = "0.4.41"
chrono-tz = "0.10.4"
good-morning-lib = { path = "../good-morning-lib"}
embedded-graphics = "0.8.1"
esp-idf-hal = "0.45.2"
ical_property = "0.1.3"
embedded-svc = "0.28.1"
dotenvy_macro = "0.15.7"
serde_json = "1.0.140"
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare.git" }

[build-dependencies]
embuild = "0.33"
