[package]
name = "good-morning-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
embedded-graphics = "0.8.1"
ical = "0.11.0"
ical_property = "0.1.3"
rrule = "0.13.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tinybmp = "0.6.0"
tinyqoi = "0.2.0"
u8g2-fonts = { version = "0.4.0", features = ["embedded_graphics_textstyle"] }

[dev-dependencies]
dotenvy_macro = "0.15.7"
ical = "0.11.0"
embedded-graphics-simulator = "0.7.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
